Org: Add organization hierarchy and option to assign multiple organizations
-    The organization hierarchy can be created in the people-settings
-    People can be assigned to multiple organizations and sub-organizations
-    The sub-organizations in the filter drop-down on the people view get reduced to possible choices according to the chosen organization

TYPE: Feature
LINK: OGC-2096

--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-27 09:48+0100\n"
+"POT-Creation-Date: 2025-04-01 14:22+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1268,8 +1268,8 @@ msgstr "Funzione"
 msgid "Organisation"
 msgstr "Organizzazione"
 
-msgid "Sub organisation"
-msgstr "Sotto organizzazione"
+msgid "Select the organisations this person belongs to"
+msgstr "Seleziona le organizzazioni a cui appartiene questa persona"
 
 msgid "Direct Phone Number or Mobile"
 msgstr "Numero di telefono diretto o cellulare"
@@ -1760,15 +1760,6 @@ msgstr "Percorso"
 msgid "Please enter a path without schema or host"
 msgstr "Inserisci un percorso senza schema o host"
 
-msgid "Hide these fields for non-logged-in users"
-msgstr "Nascondi questi campi per gli utenti non registrati"
-
-msgid "People"
-msgstr "Persone"
-
-msgid "External ID"
-msgstr "ID esterno"
-
 msgid "Duration of mTAN session"
 msgstr "Durata della sessione mTAN"
 
@@ -2186,6 +2177,59 @@ msgstr "Formato JSON non valido nelle credenziali Firebase"
 msgid "Error validating Firebase credentials: {0}"
 msgstr "Errore durante la convalida delle credenziali Firebase: {0}"
 
+msgid "Organisation hierarchy"
+msgstr "Gerarchia dell'organizzazione"
+
+msgid ""
+"Example for organisation hierarchy with subtopics in yaml format. Note: "
+"Deeper structures are not supported.\n"
+"```\n"
+"- Organisation:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"- Organisation 2:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"```"
+msgstr ""
+"Esempio di gerarchia dell'organizzazione con sottoargomenti in formato yaml. "
+"Nota: le strutture più profonde non sono supportate.\n"
+"```\n"
+"- Organizzazione:\n"
+"  - Sotto-organizzazione 1\n"
+"  - Sotto-organizzazione 2\n"
+"- Organizzazione 2:\n"
+"  - Sotto-organizzazione 1\n"
+"  - Sotto-organizzazione 2\n"
+"```"
+
+msgid "Hide these fields for non-logged-in users"
+msgstr "Nascondi questi campi per gli utenti non registrati"
+
+msgid "External ID"
+msgstr "ID esterno"
+
+msgid ""
+"Invalid format. Please define a list with organisations and sub-"
+"organisations according the example."
+msgstr ""
+"Formato non valido. Definire un elenco con organizzazioni e sotto-"
+"organizzazioni secondo l'esempio."
+
+msgid ""
+"Invalid format. Please define organisations and sub-organisations according "
+"to the example."
+msgstr ""
+"Formato non valido. Definire organizzazioni e sotto-organizzazioni secondo "
+"l'esempio."
+
+msgid ""
+"Invalid format. Only organisations and sub-organisations are allowed - no "
+"deeper structures supported."
+msgstr ""
+"Formato non valido. Sono consentite solo organizzazioni e sotto-"
+"organizzazioni, non sono supportate strutture più profonde."
+
 msgid "VAT Rate"
 msgstr "Aliquota IVA"
 
@@ -2516,6 +2560,9 @@ msgstr "Finestre di invio"
 
 msgid "Survey"
 msgstr "Sondaggio"
+
+msgid "People"
+msgstr "Persone"
 
 msgid "Person"
 msgstr "Persona"
@@ -4624,17 +4671,17 @@ msgstr ""
 msgid "Request Reference"
 msgstr "Riferimento della richiesta"
 
-msgid "No people added yet."
-msgstr "Nessuna persona aggiunta ancora."
-
-msgid "No people found for current filter selection."
-msgstr "Non sono state trovate persone per la selezione del filtro corrente."
-
 msgid "Select organisation"
 msgstr "Selezionare l'organizzazione"
 
 msgid "Select sub organisation"
 msgstr "Selezionare la sotto-organizzazione"
+
+msgid "No people found for current filter selection."
+msgstr "Non sono state trovate persone per la selezione del filtro corrente."
+
+msgid "Reset filter"
+msgstr "Ripristina filtro"
 
 msgid "Export a vCard of this person"
 msgstr "Esporta una vCard di questa persona"
@@ -6562,5 +6609,23 @@ msgstr "È stato creato un account per te"
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
 
-#~ msgid "Email adress for notifications about newly opened tickets"
-#~ msgstr "Indirizzo e-mail per le notifiche dei biglietti aperti"
+#~ msgid ""
+#~ "Invalid format. Please define a list with topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire un elenco con argomenti e sottoargomenti "
+#~ "secondo l'esempio."
+
+#~ msgid ""
+#~ "Invalid format. Please define a listwith topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire una lista con argomenti e sottoargomenti "
+#~ "secondo l'esempio."
+
+#~ msgid ""
+#~ "Invalid format. Please define an organisation name with topics and "
+#~ "subtopics according the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire un nome di organizzazione con argomenti e "
+#~ "sottoargomenti secondo l'esempio."
