--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-31 13:22+0200\n"
+"POT-Creation-Date: 2025-04-01 14:22+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1265,8 +1265,8 @@ msgstr "Funktion"
 msgid "Organisation"
 msgstr "Organisation"
 
-msgid "Sub organisation"
-msgstr "Unterorganisation"
+msgid "Select the organisations this person belongs to"
+msgstr "Wählen Sie die Organisationen, zu denen diese Person gehört"
 
 msgid "Direct Phone Number or Mobile"
 msgstr "Direktnummer oder Mobil"
@@ -1756,15 +1756,6 @@ msgstr "Pfad"
 msgid "Please enter a path without schema or host"
 msgstr "Bitte geben Sie einen Pfad ohne Schema oder Hostname an"
 
-msgid "Hide these fields for non-logged-in users"
-msgstr "Diese Felder für nicht angemeldete Benutzer ausblenden"
-
-msgid "People"
-msgstr "Personen"
-
-msgid "External ID"
-msgstr "Externe ID"
-
 msgid "Duration of mTAN session"
 msgstr "Dauer der mTAN-Session"
 
@@ -2172,6 +2163,59 @@ msgstr "Ungültiges JSON-Format in den Firebase- Zugangsdaten"
 msgid "Error validating Firebase credentials: {0}"
 msgstr "Fehler bei der Überprüfung der Firebase- Zugangsdaten: {0}"
 
+msgid "Organisation hierarchy"
+msgstr "Organisationshierarchie"
+
+msgid ""
+"Example for organisation hierarchy with subtopics in yaml format. Note: "
+"Deeper structures are not supported.\n"
+"```\n"
+"- Organisation:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"- Organisation 2:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"```"
+msgstr ""
+"Beispiel für Organisationshierarchie mit Unterorganisationen im yaml-Format. "
+"Hinweis: Tiefere Strukturen werden nicht unterstützt.\n"
+"```\n"
+"- Organisation:\n"
+"  - Unterorganisation 1\n"
+"  - Unterorganisation 2\n"
+"- Organisation 2:\n"
+"  - Unterorganisation 1\n"
+"  - Unterorganisation 2\n"
+"```"
+
+msgid "Hide these fields for non-logged-in users"
+msgstr "Diese Felder für nicht angemeldete Benutzer ausblenden"
+
+msgid "External ID"
+msgstr "Externe ID"
+
+msgid ""
+"Invalid format. Please define a list with organisations and sub-"
+"organisations according the example."
+msgstr ""
+"Ungültiges Format. Bitte definieren Sie eine Liste mit Organisationen und "
+"Unterorganisationen wie im Beispiel."
+
+msgid ""
+"Invalid format. Please define organisations and sub-organisations according "
+"to the example."
+msgstr ""
+"Ungültiges Format. Bitte definieren Sie Organisationen und "
+"Unterorganisationen wie im Beispiel."
+
+msgid ""
+"Invalid format. Only organisations and sub-organisations are allowed - no "
+"deeper structures supported."
+msgstr ""
+"Ungültiges Format. Nur Organisationen und Unterorganisationen sind "
+"erlaubt - keine tiefer verschachtelten Strukturen unterstützt."
+
 msgid "VAT Rate"
 msgstr "Mehrwertsteuersatz"
 
@@ -2506,6 +2550,9 @@ msgstr "Befragungszeiträume"
 
 msgid "Survey"
 msgstr "Umfrage"
+
+msgid "People"
+msgstr "Personen"
 
 msgid "Person"
 msgstr "Person"
@@ -4627,17 +4674,17 @@ msgstr ""
 msgid "Request Reference"
 msgstr "Referenz Anfrage"
 
-msgid "No people added yet."
-msgstr "Es wurden noch keine Personen hinzugefügt."
-
-msgid "No people found for current filter selection."
-msgstr "Keine Personen für aktuelle Filterauswahl gefunden."
-
 msgid "Select organisation"
 msgstr "Organisation wählen"
 
 msgid "Select sub organisation"
 msgstr "Unterorganisation wählen"
+
+msgid "No people found for current filter selection."
+msgstr "Keine Personen für aktuelle Filterauswahl gefunden."
+
+msgid "Reset filter"
+msgstr "Filter zurücksetzen"
 
 msgid "Export a vCard of this person"
 msgstr "Elektronische Visitenkarte (vCard)"
@@ -6557,6 +6604,13 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+#~ msgid ""
+#~ "Invalid format. Please define a list with topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Ungültiges Format. Bitte definieren Sie eine Liste mit Themen und "
+#~ "Unterthemen entsprechend dem Beispiel."
 
 #~ msgid ""
 #~ "Invalid format. Please define a listwith topics and subtopics according "
