--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-31 13:22+0200\n"
+"POT-Creation-Date: 2025-04-01 14:22+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1264,8 +1264,8 @@ msgstr "Fonction"
 msgid "Organisation"
 msgstr "Organisation"
 
-msgid "Sub organisation"
-msgstr "Sous-organisation"
+msgid "Select the organisations this person belongs to"
+msgstr "Sélectionnez les organisations auxquelles cette personne appartient"
 
 msgid "Direct Phone Number or Mobile"
 msgstr "Numéro de téléphone direct ou Mobile"
@@ -1759,15 +1759,6 @@ msgstr "Chemin"
 msgid "Please enter a path without schema or host"
 msgstr "Veuillez entrer un chemin d'accès sans schéma ou hôte"
 
-msgid "Hide these fields for non-logged-in users"
-msgstr "Masquer ces champs pour les utilisateurs non connectés"
-
-msgid "People"
-msgstr "Personnes"
-
-msgid "External ID"
-msgstr "ID externe"
-
 msgid "Duration of mTAN session"
 msgstr "Durée de la séance mTAN"
 
@@ -2186,6 +2177,59 @@ msgstr ""
 "Une erreur s'est produite lors de la validation des informations "
 "d'identification Firebase : {0}"
 
+msgid "Organisation hierarchy"
+msgstr "Hiérarchie d'organisation"
+
+msgid ""
+"Example for organisation hierarchy with subtopics in yaml format. Note: "
+"Deeper structures are not supported.\n"
+"```\n"
+"- Organisation:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"- Organisation 2:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"```"
+msgstr ""
+"Exemple de hiérarchie d'organisation avec des sous-sujets au format yaml. "
+"Note : Les structures plus profondes ne sont pas prises en charge. \n"
+"```\n"
+"- Organisation:\n"
+"  - Sous-organisation 1\n"
+"  - Sous-organisation 2\n"
+"- Organisation 2:\n"
+"  - Sous-organisation 1\n"
+"  - Sous-organisation 2\n"
+"```"
+
+msgid "Hide these fields for non-logged-in users"
+msgstr "Masquer ces champs pour les utilisateurs non connectés"
+
+msgid "External ID"
+msgstr "ID externe"
+
+msgid ""
+"Invalid format. Please define a list with organisations and sub-"
+"organisations according the example."
+msgstr ""
+"Format non valide. Veuillez définir une liste avec des organisations et des "
+"sub-organisations selon l'exemple."
+
+msgid ""
+"Invalid format. Please define organisations and sub-organisations according "
+"to the example."
+msgstr ""
+"Format non valide. Veuillez définir des organisations et des sous-"
+"organisations selon l'exemple."
+
+msgid ""
+"Invalid format. Only organisations and sub-organisations are allowed - no "
+"deeper structures supported."
+msgstr ""
+"Format non valide. Seules les organisations et les sous-organisations sont "
+"autorisées - aucune structure plus profonde n'est prise en charge."
+
 msgid "VAT Rate"
 msgstr "Taux de TVA"
 
@@ -2515,6 +2559,9 @@ msgstr "Fenêtres de soumission"
 
 msgid "Survey"
 msgstr "Sondage"
+
+msgid "People"
+msgstr "Personnes"
 
 msgid "Person"
 msgstr "Personne"
@@ -4637,17 +4684,17 @@ msgstr ""
 msgid "Request Reference"
 msgstr "Référence"
 
-msgid "No people added yet."
-msgstr "Aucune personne n'a encore été ajoutée."
-
-msgid "No people found for current filter selection."
-msgstr "Aucune personne n'a été trouvée pour la sélection de filtre actuelle."
-
 msgid "Select organisation"
 msgstr "Sélectionner une organisation"
 
 msgid "Select sub organisation"
 msgstr "Sélectionner une sous-organisation"
+
+msgid "No people found for current filter selection."
+msgstr "Aucune personne n'a été trouvée pour la sélection de filtre actuelle."
+
+msgid "Reset filter"
+msgstr "Réinitialiser le filtre"
 
 msgid "Export a vCard of this person"
 msgstr "Exporter une vCard de cette personne"
@@ -6578,6 +6625,13 @@ msgstr "Un compte a été créé pour vous"
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
 
+
+#~ msgid ""
+#~ "Invalid format. Please define a list with topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Format non valide. Veuillez définir une liste de sujets et de sous-sujets "
+#~ "selon l'exemple."
 
 #~ msgid ""
 #~ "Invalid format. Please define a listwith topics and subtopics according "
