--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-27 09:48+0100\n"
+"POT-Creation-Date: 2025-04-08 07:30+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -113,6 +113,13 @@ msgstr "Manuell"
 
 msgid "Stripe Connect"
 msgstr "Stripe Connect"
+
+#, python-format
+msgid "Daily Newsletter ${time}"
+msgstr "Täglicher Newsletter ${time}"
+
+msgid "New news since the last newsletter:"
+msgstr "Neue Einträge seit dem letzten Newsletter:"
 
 #, python-format
 msgid "${org} OneGov Cloud Status"
@@ -1925,8 +1932,8 @@ msgstr "Bitte geben Sie ein Datumspaar pro Zeile ein"
 msgid "End date needs to be after start date"
 msgstr "Das End-Datum muss vor dem Start-Datum sein"
 
-msgid "Email adress for notifications about newly opened tickets"
-msgstr "E-Mail-Adresse für Benachrichtigungen zu geöffneten Tickets"
+msgid "Email address for notifications about newly opened tickets"
+msgstr "Email-Adresse für Benachrichtigungen über neu eröffnete Tickets"
 
 msgid "Accept request and close ticket automatically based on:"
 msgstr "Akzeptiere und schliesse Tickets automatisch basierend auf:"
@@ -2023,6 +2030,31 @@ msgstr ""
 "Sende eine E-Mail-Benachrichtigung an die folgenden Benutzer, wenn sich ein "
 "Empfänger vom Newsletter abmeldet"
 
+msgid "Enable automatic daily newsletters"
+msgstr "Automatische tägliche Newsletter aktivieren"
+
+msgid ""
+"Automatically creates a daily newsletter containing all new news items since "
+"the last sending time. It will only send a newsletter if there is at least "
+"one new news item. Only subscribers who subscribed to the daily newsletter "
+"will receive it, independent of their selected categories if there are any."
+msgstr ""
+"Erstellt automatisch einen täglichen Newsletter, der alle neuen News seit "
+"dem letzten Versand enthält. Es wird nur ein Newsletter versendet, wenn es "
+"mindestens einen neuen News-Eintrag gibt. Nur Abonnenten, die sich für den "
+"täglichen Newsletter angemeldet haben, erhalten diesen, unabhängig von den "
+"ausgewählten Kategorien, falls vorhanden."
+
+msgid "Automatic newsletters"
+msgstr "Automatische Newsletter"
+
+msgid "Newsletter sending times (24h format)"
+msgstr "Newsletter Versandzeiten (24h Format)"
+
+msgid "Specify times for sending newsletters. e.g., 8, 12, 18."
+msgstr ""
+"Definieren Sie die Zeiten für den Versand von Newslettern. z.B. 8, 12, 18."
+
 msgid "Invalid YAML format. Please refer to the example."
 msgstr "Ungültiges YAML Format. Bitte beachten Sie das Beispiel."
 
@@ -2038,6 +2070,16 @@ msgid ""
 msgstr ""
 "Ungültiges Format. Nur Themen und Unterthemen sind erlaubt - es werden keine "
 "tiefer verschachtelte Strukturen unterstützt."
+
+msgid "Please specify at least one time."
+msgstr "Bitte geben Sie mindestens eine Zeit an."
+
+msgid "Invalid time format. Please use a value between 0 and 24."
+msgstr ""
+"Ungültiges Zeitformat. Bitte verwenden Sie einen Wert zwischen 0 und 24."
+
+msgid "Invalid time format. Please use 24h format."
+msgstr "Ungültiges Zeitformat. Bitte verwenden Sie das 24h Format."
 
 msgid "Old domain"
 msgstr "Alte Domain"
@@ -2179,6 +2221,17 @@ msgstr "E-Mail Adresse"
 
 msgid "The subscriber has given consent to receive the newsletter."
 msgstr "Der Abonnent hat der Zustellung des Newsletters zugestimmt."
+
+msgid "Daily newsletter for all categories (only for news items)"
+msgstr "Täglicher Newsletter für alle Kategorien (nur für News-Einträge)"
+
+#, python-format
+msgid ""
+"If there are any new news items since the last sending time you will receive "
+"the newsletter at the following times: ${joined}:00."
+msgstr ""
+"Wenn es seit dem letzten Versand neue News-Einträge gibt, erhalten Sie den "
+"Newsletter zu den folgenden Zeiten: ${joined}:00."
 
 msgid "Submission Window"
 msgstr "Befragungszeitraum"
@@ -6541,6 +6594,37 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+#~ msgid "Daily Newsletter"
+#~ msgstr "Täglicher Newsletter"
+
+#~ msgid ""
+#~ "Automatically creates a daily newsletter containing all new news items "
+#~ "since the last sending time. It will only send a newsletter if there is "
+#~ "at least one new news item. Only subscribers who checked the \"daily "
+#~ "newsletters\" checkbox will receive it, independent of their selected "
+#~ "categories if there are any."
+#~ msgstr ""
+#~ "Erstellt automatisch einen täglichen Newsletter, der alle neuen News seit "
+#~ "der letzten Versandzeit enthält. Es wird nur ein Newsletter versendet, "
+#~ "wenn es mindestens ein einen neuen News-Eintrag gibt. Nur Abonnenten, die "
+#~ "die Checkbox \"tägliche Newsletter\" ausgewählt haben, erhalten ihn, "
+#~ "unabhängig von ihren ausgewählten Kategorien, falls vorhanden."
+
+#~ msgid ""
+#~ "Automatically creates a daily newsletter containing all new news items "
+#~ "since the last sending time. It will only send a newsletter if there is "
+#~ "at least one new news item and only subscribers of the automatically "
+#~ "created \"daily\"-category will receive it."
+#~ msgstr ""
+#~ "Erstellt automatisch einen täglichen Newsletter, der alle neuen "
+#~ "Nachrichtenelemente seit der letzten Versandzeit enthält. Es wird nur ein "
+#~ "Newsletter gesendet, wenn es mindestens ein neues Nachrichtenelement gibt "
+#~ "und nur Abonnenten der automatisch erstellten \"täglich\"-Kategorie "
+#~ "erhalten ihn."
+
+#~ msgid "Email adress for notifications about newly opened tickets"
+#~ msgstr "E-Mail-Adresse für Benachrichtigungen zu geöffneten Tickets"
 
 #~ msgid ""
 #~ "Invalid format. Please define a listwith topics and subtopics according "
