--- a/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-11-18 10:17+0100\n"
+"POT-Creation-Date: 2025-04-08 10:29+0200\n"
 "PO-Revision-Date: 2021-11-11 09:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -212,6 +212,9 @@ msgstr "Sexe participant·e"
 
 msgid "Attendee Notes"
 msgstr "Remarques participant·e"
+
+msgid "Attendee SwissPass ID"
+msgstr "Identifiant SwissPass participant·e"
 
 msgid "Attendee Booking-Limit"
 msgstr "Maximum de réservations par participant·e"
@@ -691,6 +694,9 @@ msgstr "Y a-t-il quelque chose que l'instructeur devrait savoir ?"
 msgid "Allergies, Disabilities, Particulars"
 msgstr "Allergies, handicaps, particularités"
 
+msgid "Swisspass ID"
+msgstr "Identifiant Swisspass"
+
 msgid "The address of the attendee differs from the users address"
 msgstr "L'adresse du participant diffère de l'adresse de l'utilisateur"
 
@@ -702,6 +708,14 @@ msgstr "Code postal"
 
 msgid "Political municipality"
 msgstr "Municipalité politique"
+
+msgid "The Swisspass ID must be 13 characters long."
+msgstr ""
+"L'identifiant Swisspass doit comporter 13 caractères."
+
+msgid "The Swisspass ID must only contain digits and dashes."
+msgstr ""
+"L'identifiant Swisspass ne doit contenir que des chiffres et des tirets."
 
 msgid "Attendee"
 msgstr "Participant·e·s"
