--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-08 15:46+0200\n"
+"POT-Creation-Date: 2025-04-09 13:41+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -354,14 +354,14 @@ msgstr "Jeweils bis"
 msgid "May be partially reserved"
 msgstr "Kann abschnittweise reserviert werden"
 
-msgid "Options"
-msgstr "Optionen"
-
 msgid "Reservations per time slot"
 msgstr "Maximale Anzahl Reservationen per Zeiteinheit"
 
 msgid "Available items"
 msgstr "Anzahl verfügbare Gegenstände"
+
+msgid "Options"
+msgstr "Optionen"
 
 msgid "Reservations per time slot and person"
 msgstr "Reservationen per Zeiteinheit und Nutzer"
@@ -1359,10 +1359,10 @@ msgid "No closing date"
 msgstr "Kein Annahmeschluss"
 
 msgid "Stop accepting reservations days before the allocation"
-msgstr "Tage vor der Einteilung keine Reservationen mehr annehmen"
+msgstr "Tage vor der Verfügbarkeit keine Reservationen mehr annehmen"
 
 msgid "Stop accepting reservations hours before the allocation"
-msgstr "Stunden vor der Einteilung keine Reservationen mehr annehmen"
+msgstr "Stunden vor der Verfügbarkeit keine Reservationen mehr annehmen"
 
 msgid "Hours"
 msgstr "Stunden"
@@ -1383,7 +1383,7 @@ msgid "Allowed zip-codes (one per line)"
 msgstr "Erlaubte Postleitzahlen (eine PLZ pro Zeile)"
 
 msgid "Days before an allocation may be reserved by anyone"
-msgstr "Anzahl Tage bevor Einteilungen von allen reserviert werden können"
+msgstr "Anzahl Tage bevor Verfügbarkeiten von allen reserviert werden können"
 
 msgid "Default view"
 msgstr "Standardansicht"
@@ -2685,17 +2685,20 @@ msgstr "Belegung"
 msgid "Subscribe"
 msgstr "Abonnieren"
 
+msgid "Availability Periods"
+msgstr "Verfügbarkeitszeiträume"
+
 msgid "Rules"
 msgstr "Regeln"
 
 msgid "Edit allocation"
-msgstr "Einteilung bearbeiten"
+msgstr "Verfügbarkeit bearbeiten"
 
 msgid "Do you really want to delete this allocation?"
-msgstr "Möchten Sie diese Einteilung wirklich löschen?"
+msgstr "Möchten Sie diese Verfügbarkeit wirklich löschen?"
 
 msgid "Delete allocation"
-msgstr "Einteilung löschen"
+msgstr "Verfügbarkeit löschen"
 
 msgid "This resource can't be deleted."
 msgstr "Diese Reservations-Ressource kann nicht gelöscht werden."
@@ -4770,12 +4773,12 @@ msgstr "Reservationen müssen mindestens ${n} Stunden im Voraus gemacht werden."
 
 msgid "Select a free time span in the calendar below to create an allocation."
 msgstr ""
-"Wählen Sie eine freie Zeitspanne im Kalender aus um eine Einteilung zu "
+"Wählen Sie eine freie Zeitspanne im Kalender aus um eine Verfügbarkeit zu "
 "machen."
 
 msgid "Removes all unreserved allocations between the start and end date."
 msgstr ""
-"Entfernt alle nicht-reservierten Einteilungen zwischen Start- und End-Datum"
+"Entfernt alle nicht-reservierten Verfügbarkeiten zwischen Start- und End-Datum"
 
 msgid "Reservation is pending approval"
 msgstr "Diese Reservation wurde noch nicht akzeptiert"
@@ -5048,7 +5051,7 @@ msgid ""
 "You can only reserve this allocation before ${date} if you live in the "
 "following zipcodes: ${zipcodes}"
 msgstr ""
-"Sie können diese Einteilung nur vor dem ${date} reservieren, wenn Sie in "
+"Sie können diese Verfügbarkeit nur vor dem ${date} reservieren, wenn Sie in "
 "einem der folgenden Postleitzahlen wohnen: ${zipcodes}"
 
 #, python-format
@@ -5066,18 +5069,18 @@ msgid ""
 "This allocation can't be deleted because there are existing reservations "
 "associated with it."
 msgstr ""
-"Diese Einteilung kann nicht gelöscht werden, da bestehende Reservationen "
+"Diese Verfügbarkeit kann nicht gelöscht werden, da bestehende Reservationen "
 "betroffen wären."
 
 msgid ""
 "To delete this allocation, all existing reservations need to be cancelled "
 "first."
 msgstr ""
-"Um die Einteilung zu löschen, müssen zuerst alle bestehenden Reservationen "
+"Um die Verfügbarkeit zu löschen, müssen zuerst alle bestehenden Reservationen "
 "abgesagt werden."
 
 msgid "A conflicting allocation exists for the requested time period."
-msgstr "Es besteht bereits eine Einteilung im gewünschten Zeitraum."
+msgstr "Es besteht bereits eine Verfügbarkeit im gewünschten Zeitraum."
 
 msgid "A conflicting reservation exists for the requested time period."
 msgstr "Dieser Termin wurde bereits ausgewählt."
@@ -5112,16 +5115,16 @@ msgstr ""
 "Die gewünschte Anzahl Reservationen ist ungültig (Mindestanzahl ist eins)."
 
 msgid "The allocation does not have enough free spots."
-msgstr "Die Einteilung hat nicht genügend freie Plätze."
+msgstr "Die Verfügbarkeit hat nicht genügend freie Plätze."
 
 msgid "The resulting allocation would be invalid."
-msgstr "Die gewünschte Einteilung ist ungültig."
+msgstr "Die gewünschte Verfügbarkeit ist ungültig."
 
 msgid "No reservations to confirm."
 msgstr "Keine Reservationen gefunden die Bestätigt werden können."
 
 msgid "The given timerange is longer than the existing allocation."
-msgstr "Der gewünschte Zeitraum liegt ausserhalb der Einteilung."
+msgstr "Der gewünschte Zeitraum liegt ausserhalb der Verfügbarkeit."
 
 msgid "Reservation too short. A reservation must last at least 5 minutes."
 msgstr ""
@@ -5135,36 +5138,45 @@ msgstr "Stop"
 msgid "Do you really want to stop \"${title}\"?"
 msgstr "Möchten Sie \"${title}\" wirklich stoppen?"
 
-msgid "The rule will be removed without affecting existing allocations."
-msgstr "Die Regel wird entfernt, bestehende Einteilungen bleiben."
+msgid ""
+"The availability period will be removed without affecting existing "
+"allocations."
+msgstr ""
+"Der Verfügbarkeitszeitrum wird entfernt ohne bestehende Verfügbarkeiten zu "
+"beeinflussen."
 
-msgid "Stop rule"
-msgstr "Regel stoppen"
+msgid "Stop availability period"
+msgstr "Verfügbarkeitszeitraum stoppen"
 
 msgid ""
-"All allocations created by the rule will be removed, if they haven't been "
-"reserved yet."
-msgstr "Alle Einteilungen der Regel werden entfernt, sofern nicht reserviert."
+"All allocations created by the availability period will be removed, if they "
+"haven't been reserved yet."
+msgstr ""
+"Alle Verfügbarkeiten die durch den Verfügbarkeitszeitraum erstellt wurden "
+"werden entfernt, sofern sie noch nicht reserviert wurden."
 
 msgid "Delete rule"
 msgstr "Regel löschen"
 
+msgid "Availability periods"
+msgstr "Verfügbarkeitszeiträume"
+
 msgid "No allocations to add"
-msgstr "Keine Einteilungen die hinzugefügt werden können"
+msgstr "Keine Verfügbarkeiten die hinzugefügt werden können"
 
 #, python-format
 msgid "Successfully added ${n} allocations"
-msgstr "${n} Einteilungen wurden hinzugefügt"
+msgstr "${n} Verfügbarkeiten wurden hinzugefügt"
 
 msgid "New allocation"
-msgstr "Neue Einteilung"
+msgstr "Neue Verfügbarkeit"
 
 msgid "Your changes were saved"
 msgstr "Ihre Änderungen wurden gespeichert"
 
 #, python-format
 msgid "New rule active, ${n} allocations created"
-msgstr "Regel aktiv, ${n} Einteilungen erstellt"
+msgstr "Regel aktiv, ${n} Verfügbarkeiten erstellt"
 
 msgid "New Rule"
 msgstr "Neue Regel"
@@ -5173,7 +5185,7 @@ msgid ""
 "Rules ensure that the allocations between start/end exist and that they are "
 "extended beyond those dates at the given intervals. "
 msgstr ""
-"Regeln stellen sicher dass die Einteilungen zwischen Start und Ende bestehen "
+"Regeln stellen sicher dass die Verfügbarkeiten zwischen Start und Ende bestehen "
 "und dass sie im gewählten Interval verlängert werden."
 
 #, python-format
@@ -5181,8 +5193,8 @@ msgid ""
 "Rule updated. ${deleted} allocations removed, ${created} new allocations "
 "created."
 msgstr ""
-"Regel aktualisiert. ${deleted} Einteilungen entfernt, ${created} neue "
-"Einteilungen erstellt."
+"Verfügbarkeitszeitraum aktualisiert. ${deleted} Verfügbarkeiten entfernt, "
+"${created} neue Verfügbarkeiten erstellt."
 
 msgid "Rule not found"
 msgstr "Regel nicht gefunden"
@@ -5195,7 +5207,7 @@ msgstr "Die Regel wurde gestoppt"
 
 #, python-format
 msgid "The rule was deleted, along with ${n} allocations"
-msgstr "Die Regel wurde gelöscht, zusammen mit ${n} Einteilungen"
+msgstr "Die Verfügbarkeit wurde gelöscht, zusammen mit ${n} Verfügbarkeiten"
 
 msgid "Topics A-Z"
 msgstr "Themen A-Z"
@@ -6602,3 +6614,15 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+#~ msgid "The rule will be removed without affecting existing allocations."
+#~ msgstr "Die Regel wird entfernt, bestehende Einteilungen bleiben."
+
+#~ msgid "Stop rule"
+#~ msgstr "Regel stoppen"
+
+#~ msgid ""
+#~ "All allocations created by the rule will be removed, if they haven't been "
+#~ "reserved yet."
+#~ msgstr ""
+#~ "Alle Einteilungen der Regel werden entfernt, sofern nicht reserviert."
