--- a/src/onegov/feriennet/locale/it_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/it_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-04-08 10:29+0200\n"
+"POT-Creation-Date: 2025-04-09 20:44+0200\n"
 "PO-Revision-Date: 2021-11-11 09:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -3111,6 +3111,12 @@ msgstr "Profilo utente"
 
 msgid "Require the political municipality on registration"
 msgstr "Richiedere al comune politico la registrazione"
+
+msgid "Require a SwissPass ID of attendees"
+msgstr "Richiedere un ID SwissPass per i partecipanti"
+
+msgid "SwissPass ID"
+msgstr "ID SwissPass"
 
 msgid "Parents can see the contacts of other parents in the same activity"
 msgstr ""
